--- a/style.css
+++ b/style.css
@@ -154,6 +154,8 @@ body {
     height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
     color: #FFFFFF;
     padding: 0 10%;
 }
@@ -407,7 +409,9 @@ body {
 }
 
 .container-materi{
-    transform: translateY(-9rem);
+    display: flex;
+    justify-content: space-around;
+    transform: translateY(-150px);
 }
 
 .header {
